fix: Change foursquare card overflow

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -197,7 +197,7 @@ header h2 {
     border-radius: 10px;
     padding: 10px;
     margin: 20px;
-    overflow: scroll;
+    overflow: auto;
     box-shadow: 0px 0px 7px 2px #f3efef;
 }
 
